arreglo de errores